# maid

./: .gitignore  README.md  default.nix  flake.nix  lock.json  pyproject.toml  script.py
maid/: __init__.py
